--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "lab21",
   "version": "1.0.0",
   "description": "lab 21 project",
-  "main": "main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node_modules/.bin/gulp build",
+    "start": "ts-node -r tsconfig-paths/register ./src/main.ts"
   },
   "author": "Dikcha",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "gulp": "^4.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-shell": "^0.7.0",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^5.2.1",
     "sequelize-typescript": "^0.6.8",
+    "ts-node": "^8.0.3",
+    "tsconfig-paths": "^3.8.0",
     "typescript": "^2.8.4"
   }
 }
