--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "lab 21 project",
   "scripts": {
     "build": "node_modules/.bin/gulp build",
-    "start": "ts-node -r tsconfig-paths/register ./src/main.ts"
+    "start": "ts-node -r tsconfig-paths/register ./src/main.ts",
+    "precommit": "lint-staged"
   },
   "author": "Dikcha",
   "license": "ISC",
@@ -13,11 +14,19 @@
     "gulp": "^4.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-shell": "^0.7.0",
+    "prettier": "^1.16.4",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^4.43.0",
     "sequelize-typescript": "^0.6.8",
     "ts-node": "^8.0.3",
     "tsconfig-paths": "^3.8.0",
     "typescript": "^2.8.4"
+  },
+  "lint-staged": {
+    "*(src)/**/*.(ts,js)" : [
+      "prettier --write",
+      "git add"
+    ]
   }
+
 }
