--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "scripts": {
     "build": "node_modules/.bin/gulp build",
     "start": "ts-node -r tsconfig-paths/register ./src/main.ts",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "db-init": "node_modules/.bin/gulp db-init"
   },
   "author": "Dikcha",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "gulp": "^4.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-shell": "^0.7.0",
+    "mysql2": "^1.6.5",
     "prettier": "^1.16.4",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^4.43.0",
@@ -23,10 +26,9 @@
     "typescript": "^2.8.4"
   },
   "lint-staged": {
-    "*(src)/**/*.(ts,js)" : [
+    "*(src)/**/*.(ts,js)": [
       "prettier --write",
       "git add"
     ]
   }
-
 }
