--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,31 @@
   ],
   "compilerOptions": {
     "moduleResolution": "node",
-    "outDir": "dist",
     "target": "es2017",
+    "module": "commonjs",
+    "outDir": "dist",
+    "lib": [
+      "es2017",
+      "dom"
+    ],
+    "baseUrl": "./src",
+    "paths": {
+      "app": ["./app"],
+      "database": ["./database"]
+    },
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "noUnusedParameters": true,
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "removeComments": true,
+    "pretty": true,
     "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "allowUnreachableCode": false,
+    "forceConsistentCasingInFileNames": true,
+    "newLine": "CRLF",
+    "alwaysStrict": true,
+    "sourceMap": false,
     "skipLibCheck": true
   },
   "exclude": [
