--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "Dikcha",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.16.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "gulp": "^4.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-shell": "^0.7.0",
+    "http-status-codes": "^1.3.2",
     "mysql2": "^1.6.5",
     "prettier": "^1.16.4",
     "reflect-metadata": "^0.1.13",
