--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-shell": "^0.7.0",
     "http-status-codes": "^1.3.2",
+    "joi": "^14.3.1",
     "mysql2": "^1.6.5",
     "prettier": "^1.16.4",
     "reflect-metadata": "^0.1.13",
