--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-winston": "^3.1.0",
     "gulp": "^4.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-shell": "^0.7.0",
     "http-status-codes": "^1.3.2",
     "joi": "^14.3.1",
+    "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "prettier": "^1.16.4",
     "reflect-metadata": "^0.1.13",
@@ -27,7 +29,8 @@
     "sequelize-typescript": "^0.6.8",
     "ts-node": "^8.0.3",
     "tsconfig-paths": "^3.8.0",
-    "typescript": "^2.8.4"
+    "typescript": "^2.8.4",
+    "winston": "^3.2.1"
   },
   "lint-staged": {
     "*(src)/**/*.(ts,js)": [
