--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-shell": "^0.7.0",
     "http-status-codes": "^1.3.2",
     "joi": "^14.3.1",
+    "lru-cache": "^5.1.1",
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "prettier": "^1.16.4",
